[DEV-tftp] Rev2：gtest用ビルド環境とCentOSビルド

--- a/OnlineProgram/makefile
+++ b/OnlineProgram/makefile
@@ -17,13 +17,13 @@ SRCDIR := .
 OBJDIR := build
 TARGET := $(OBJDIR)/$(PROGNAME)
 
-TOOLCHAIN := ~/sdk.ac49x/barrier_breaker/staging_dir/toolchain-mipsel_mips32_gcc-4.8-linaro_uClibc-0.9.33.2
-OPENSSL := ~/sdk.ac49x/barrier_breaker/build_dir/target-mipsel_mips32_uClibc-0.9.33.2/openssl-1.0.2f
+TOOLCHAIN := /usr
+OPENSSL := /usr/local/src/openssl-1.0.2f
 
 INCDIR := -I $(TOOLCHAIN)/include -I $(OPENSSL)/include \
-~/googletest/googletest/include
+-I /usr/local/src/googletest/googletest/include
 LIBDIR := -L $(TOOLCHAIN)/lib -L $(OPENSSL) \
--L ~/googletest/build/googletest
+-L /usr/local/src/googletest/build/googletest
 
 SRCS := $(wildcard $(SRCDIR)/*.cpp) $(wildcard $(SRCDIR)/*.c) $(wildcard $(SRCDIR)/*.s)
 OBJS := $(SRCS:%=$(OBJDIR)/%.o)
@@ -31,9 +31,9 @@ DEPS := $(OBJS:.o=.d)
 LIBS := -lpthread -lcrypto
 
 #CC = gcc
-CC = $(TOOLCHAIN)/bin/mipsel-openwrt-linux-gcc
+CC = $(TOOLCHAIN)/bin/gcc
 CFLAGS = -Wall -O2 -DDEBUG -MMD -MP $(INCDIR)
-CXX = $(TOOLCHAIN)/bin/mipsel-openwrt-linux-g++
+CXX = $(TOOLCHAIN)/bin/g++
 CXXFLAGS = -Wall -O2 -DDEBUG -MMD -MP $(INCDIR)
 LDFLAGS = $(LIBDIR)
 ARFLAGS = crsv
