--- a/OnlineProgram/makefile.mips
+++ b/OnlineProgram/makefile.mips
@@ -7,34 +7,33 @@
 # `-- source files.
 
 ## make program name
-PROGNAME := UnitTest
-## $(PROGDIR)は、libapptest.aがあるディレクトリを指定する
-PROGDIR := ../OnlineProgram
+PROGNAME := apptest
+## $(PROGLIB)は、googletest用のテストモジュールにリンクするためのlibファイル
+PROGLIB := lib$(PROGNAME).a
 export STAGING_DIR=
-export LD_LIBRARY_PATH=/usr/local/src/openssl-1.0.2f
 
 ## Directory defines
 SRCDIR := .
 OBJDIR := build
 TARGET := $(OBJDIR)/$(PROGNAME)
 
-TOOLCHAIN := /usr
-OPENSSL := /usr/local/src/openssl-1.0.2f
+TOOLCHAIN := ~/sdk.ac49x/barrier_breaker/staging_dir/toolchain-mipsel_mips32_gcc-4.8-linaro_uClibc-0.9.33.2
+OPENSSL := ~/sdk.ac49x/barrier_breaker/build_dir/target-mipsel_mips32_uClibc-0.9.33.2/openssl-1.0.2f
 
-INCDIR := -I $(TOOLCHAIN)/include -I $(OPENSSL)/include -I $(PROGDIR) \
--I /usr/local/src/googletest/googletest/include
-LIBDIR := -L $(TOOLCHAIN)/lib -L $(OPENSSL) -L $(PROGDIR) \
--L /usr/local/src/googletest/build/googletest
+INCDIR := -I $(TOOLCHAIN)/include -I $(OPENSSL)/include \
+~/googletest/googletest/include
+LIBDIR := -L $(TOOLCHAIN)/lib -L $(OPENSSL) \
+-L ~/googletest/build/googletest
 
 SRCS := $(wildcard $(SRCDIR)/*.cpp) $(wildcard $(SRCDIR)/*.c) $(wildcard $(SRCDIR)/*.s)
 OBJS := $(SRCS:%=$(OBJDIR)/%.o)
 DEPS := $(OBJS:.o=.d)
-LIBS := -lpthread -lcrypto -lgtest -lgtest_main -lapptest
+LIBS := -lpthread -lcrypto
 
 #CC = gcc
-CC = $(TOOLCHAIN)/bin/gcc
+CC = $(TOOLCHAIN)/bin/mipsel-openwrt-linux-gcc
 CFLAGS = -Wall -O2 -DDEBUG -MMD -MP $(INCDIR)
-CXX = $(TOOLCHAIN)/bin/g++
+CXX = $(TOOLCHAIN)/bin/mipsel-openwrt-linux-g++
 CXXFLAGS = -Wall -O2 -DDEBUG -MMD -MP $(INCDIR)
 LDFLAGS = $(LIBDIR)
 ARFLAGS = crsv
@@ -44,6 +43,7 @@ ARFLAGS = crsv
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
+	$(AR) $(ARFLAGS) $(PROGLIB) $^
 	$(CXX) -o $@ $^ $(LDFLAGS) $(LIBS)
 
 # ssembly
@@ -54,7 +54,7 @@ $(OBJDIR)/%.s.o:%.s
 # c source
 $(OBJDIR)/%.c.o:%.c
 	@if [ ! -e `dirname $@` ]; then mkdir -p `dirname $@`; fi
-	$(CC) $(CFLAGS) $(LIBS) -o $@ -c $<
+	$(CC) $(CFLAGS) -o $@ -c $<
 
 # c++ source
 $(OBJDIR)/%.cpp.o:%.cpp
