--- a/UnitTest/makefile.mips
+++ b/UnitTest/makefile.mips
@@ -11,20 +11,19 @@ PROGNAME := UnitTest
 ## $(PROGDIR)は、libapptest.aがあるディレクトリを指定する
 PROGDIR := ../OnlineProgram
 export STAGING_DIR=
-export LD_LIBRARY_PATH=/usr/local/src/openssl-1.0.2f
 
 ## Directory defines
 SRCDIR := .
 OBJDIR := build
 TARGET := $(OBJDIR)/$(PROGNAME)
 
-TOOLCHAIN := /usr
-OPENSSL := /usr/local/src/openssl-1.0.2f
+TOOLCHAIN := ~/sdk.ac49x/barrier_breaker/staging_dir/toolchain-mipsel_mips32_gcc-4.8-linaro_uClibc-0.9.33.2
+OPENSSL := ~/sdk.ac49x/barrier_breaker/build_dir/target-mipsel_mips32_uClibc-0.9.33.2/openssl-1.0.2f
 
 INCDIR := -I $(TOOLCHAIN)/include -I $(OPENSSL)/include -I $(PROGDIR) \
--I /usr/local/src/googletest/googletest/include
+-I ~/googletest/googletest/include
 LIBDIR := -L $(TOOLCHAIN)/lib -L $(OPENSSL) -L $(PROGDIR) \
--L /usr/local/src/googletest/build/googletest
+-L ~/googletest/build/googletest
 
 SRCS := $(wildcard $(SRCDIR)/*.cpp) $(wildcard $(SRCDIR)/*.c) $(wildcard $(SRCDIR)/*.s)
 OBJS := $(SRCS:%=$(OBJDIR)/%.o)
@@ -32,9 +31,9 @@ DEPS := $(OBJS:.o=.d)
 LIBS := -lpthread -lcrypto -lgtest -lgtest_main -lapptest
 
 #CC = gcc
-CC = $(TOOLCHAIN)/bin/gcc
+CC = $(TOOLCHAIN)/bin/mipsel-openwrt-linux-gcc
 CFLAGS = -Wall -O2 -DDEBUG -MMD -MP $(INCDIR)
-CXX = $(TOOLCHAIN)/bin/g++
+CXX = $(TOOLCHAIN)/bin/mipsel-openwrt-linux-g++
 CXXFLAGS = -Wall -O2 -DDEBUG -MMD -MP $(INCDIR)
 LDFLAGS = $(LIBDIR)
 ARFLAGS = crsv
@@ -54,7 +53,7 @@ $(OBJDIR)/%.s.o:%.s
 # c source
 $(OBJDIR)/%.c.o:%.c
 	@if [ ! -e `dirname $@` ]; then mkdir -p `dirname $@`; fi
-	$(CC) $(CFLAGS) $(LIBS) -o $@ -c $<
+	$(CC) $(CFLAGS) -o $@ -c $<
 
 # c++ source
 $(OBJDIR)/%.cpp.o:%.cpp
